--- a/dashboard2/app/views/layouts/application.html.erb
+++ b/dashboard2/app/views/layouts/application.html.erb
@@ -67,7 +67,8 @@
       </div><!-- content -->
     </div><!-- container -->
   </body>
-
+<!-- I wonder how long I can get away with this at the bottom... -->
+<%= javascript_include_tag "prototype" %>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
