--- a/dashboard2/app/views/tags/_form.html.erb
+++ b/dashboard2/app/views/tags/_form.html.erb
@@ -1,26 +1,22 @@
 <% # FIXME: How do I put this in the model?
-   # Get a list of enabled networks
-    @networks = Network.find :all, :conditions => {:enabled => true}
 
     # Get the list of publishers for admin users
-    #@publishers = Publisher.find :all;
+    @publishers = Publisher.find :all;
 %>
 
 
 <% form_for @tag do |f| %>
   <%= f.error_messages %>
+  <% if @tag.network_id %>
+     <%= hidden_field_tag "tag[network_id]", @tag.network_id%>
+  <% end %>
   <div class="fieldset">
     <%= f.label :tag_name %><br />
     <%= f.text_field :tag_name %>
   </div>
   <div class="fieldset">
     <%= f.label :publisher, nil, :class => "left_label" %>
-    <!-- #collection_select(:tag, :publisher_id, @publishers, :id, :publisher_name, :include_blank => true) 
--->
-  </div>
-  <div class="fieldset">
-    <%= f.label :network, nil, :class => "left_label" %>
-    <%= collection_select(:tag, :network_id, @networks, :id, :network_name, :include_blank => true) %>
+    <%= collection_select(:tag, :publisher_id, @publishers, :id, :site_name, :include_blank => true) %>
   </div>
   <div class="fieldset">
     <%= f.label :size, nil, :class => "left_label" %>
@@ -56,9 +52,33 @@
     <%= f.label :rejection_time, nil, :class => "left_label" %>
     <%= f.text_field :rejection_time, :class => "input_for_number" %>
   </div>
-  <div class="fieldset">
-    <%= f.label :tag %><br />
+
+<!-- If there is a tag template, present the choice to use the default or override -->
+
+  <div class="fieldset" id="tag_template_fieldset">
+    <%= f.label :tag %>
+    <%if @tag.network.tag_template %>
+      <span class="hint">Either use the network tag template with options OR override by providing your own tag</span><br />
+    <% end %>
     <%= f.text_area :tag, :class => "tag_input" %>
   </div>
+
+  <div class="subform" id="tag_options_subform">
+  <%if @tag.network.network_tag_options %>
+      <%= f.label :tag_options, "Available Options" %>:
+     <% @tag.network.network_tag_options.each do |nto| %>
+	"<%= nto.option_name %>"<%= nto.required ? " <i>required</i>" : "" %>,
+     <% end %>
+  <% end %>
+  <br />
+  <br />
+  <div id="tag_options">
+  <% f.fields_for :tag_options do |tag_options_form| %>
+    <%= render :partial => 'tag_option', :locals=>{:f => tag_options_form} %>
+  <% end %>
+  </div>
+  <%= link_to_new_nested_form "Add a tag option", f, :tag_options %>
+  </div>
+
   <p><%= liftium_submit "Save Changes" %></p>
 <% end %>
