--- a/dashboard2/app/views/tags/index.html.erb
+++ b/dashboard2/app/views/tags/index.html.erb
@@ -14,24 +14,26 @@
     <th>Sampled</th>
     <th>Freq Cap</th>
     <th>Rej Time</th>
-    <th>Size</th>
     <th colspan="3">Actions</th>
+    <th>Fill Rate</th>
   </tr>
   <% for tag in @tags %>
     <tr class="record_row_<%= cycle("odd", "even")%>">
       <td nowrap="true" class="record_column"><%=h tag.publisher.site_name %></td>
-      <td nowrap="true" class="record_column"><%=h tag.network.network_name %> - <%= tag.tag_name %></td>
+      <td nowrap="true" class="record_column">
+	<%=h tag.network.network_name %> - <%= tag.tag_name %><br />
+	<%= tag.size %>
+      </td>
       <td class="record_column"><%=h tag.tier %></td>
       <td class="record_column">$<%=h tag.value %></td>
       <td class="record_column"><%= tag.enabled ? image_tag("/images/icons/tick.png") : image_tag("/images/icons/cross.png") %></td>
       <td class="record_column"><%=h tag.sample_rate %></td>
       <td class="record_column"><%=h tag.frequency_cap %></td>
       <td class="record_column"><%=h tag.rejection_time %></td>
-      <td class="record_column"><%=h tag.size %></td>
       <td class="record_action"><%= link_to "View", tag, :action=> :show %></td>
       <td class="record_action"><%= link_to "Edit", edit_tag_path(tag) %></td>
-      <td class="record_action"><%= link_to "Delete", tag, :confirm => 'Are you sure?', :method => "delete" %></td>
+      <td class="record_column"><%= link_to "Delete", tag, :confirm => 'Are you sure?', :method => "delete" %></td>
+      <td class="record_action"><img src="http://rgraph.liftium.com/sparkline?net=<%=tag.network_id%>&tag=<%=tag.id%>&range=15m&width=50&height=25" width="50" height="25"/></td>
     </tr>
   <% end %>
 </table>
-
